--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,8 @@
 
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 * {
-  font-family: "Raleway", sans-serif;
+  font-family: "Inter", Serif;
 }
 
 // :root {
