fliterslice path updated

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,6 @@
 $primaryColor: aliceblue;
-$nevyBlue: #54b3d6;
-$skyBlue: lightskyblue;
+$nevyBlue: #3d81f1 ;
+$skyBlue: #2874F0;
+// $skyBlue: yellow;
 $white: #ffff;
 $black: #000000;
