--- a/src/components/emptycart/emptycart.module.scss
+++ b/src/components/emptycart/emptycart.module.scss
@@ -12,11 +12,21 @@
   justify-content: center;
   align-items: center;
 
+  h1 {
+    margin-top: 20px;
+    font-weight: 800;
+    text-transform: uppercase;
+    background: -webkit-linear-gradient(#000, colors.$nevyBlue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  
   :global {
     img {
       max-width: 700px;
-      width: 100%;
+      // width: 100%;
       height: auto;
+      margin-top: 40px;
     }
   }
 }
