--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -19,6 +19,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  h1{
+    color: colors.$white;
+  }
 }
 
 .sliderCaption h1{
