--- a/src/pages/wishlist/wishlist.module.scss
+++ b/src/pages/wishlist/wishlist.module.scss
@@ -3,8 +3,28 @@
 @use "../../styles/colors.scss";
 
 
+.noitemimage{
+
+  h1 {
+    margin-top: 20px;
+    font-weight: 800;
+    text-transform: uppercase;
+    background: -webkit-linear-gradient(#000, colors.$nevyBlue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
 .wishListWrapper {
   padding: 70px 0;
+
+  h2 {
+    margin-top: 20px;
+    font-weight: 800;
+    text-transform: uppercase;
+    background: -webkit-linear-gradient(#000, colors.$nevyBlue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 }
 
 .wishListItemWrapper {
