--- a/src/components/productlist/productlist.module.scss
+++ b/src/components/productlist/productlist.module.scss
@@ -22,9 +22,10 @@
 
 .productList {
   display: grid;
-  grid-template-columns: repeat(3, 33.33%);
+  grid-template-columns: repeat(3, 31%);
   gap: 40px;
   padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .searchBar {
