--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -2,7 +2,7 @@
 @use "../../styles/colors.scss";
 
 .footer {
-  background-color: rgba(0, 0, 0, 0.402);;
+  background-color: rgba(0, 0, 0, 0.402);
   // color: $white;
   color: black;
   min-height: 60px;
