--- a/src/pages/explore/exploreall.module.scss
+++ b/src/pages/explore/exploreall.module.scss
@@ -5,13 +5,13 @@
 .productListWrapper {
   padding: 50px 0;
 
-  h2{
+  h2 {
     margin-top: 20px;
     font-weight: 800;
     text-transform: uppercase;
     background: -webkit-linear-gradient(#000, colors.$nevyBlue);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 
   :global {
@@ -40,11 +40,12 @@
 
 .productList {
   display: grid;
-  grid-template-columns: repeat(3, 33.33%);
+  grid-template-columns: repeat(3, 31%);
   gap: 40px;
   padding-top: 30px;
+  padding-bottom: 30px;
 }
-Form.Control:focus{
+Form.Control:focus {
   outline: none !important;
   border: none !important;
 }
