--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,6 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
-
 @media (max-width: constant.$media-md) {
   h3,
   h4,
@@ -22,7 +21,7 @@ body {
 
     .navbar-toggler-icon {
       color: black;
-      // background-color: colors.$white;
+      background-color: colors.$white;
     }
   }
 }
