--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -16,6 +16,7 @@
   text-decoration: none;
   color: colors.$white;
   font-weight: 600;
+  border: none;
 
   &:hover {
     color: colors.$black;
@@ -28,6 +29,7 @@
   font-weight: 800;
   line-height: 22px;
   margin-left: 30px;
+  border: none;
   background-image: linear-gradient(
     to right,
     colors.$nevyBlue,
